# line-rag-chatbot-Elixir

./: README.md  docker-compose.yml
chat_service/: .gitignore  Dockerfile  mix.exs
chat_service/assets/: package.json  tailwind.config.js
chat_service/assets/css/: app.css
chat_service/assets/js/: app.js
chat_service/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
chat_service/lib/: chat_service.ex  chat_service_web.ex
chat_service/lib/chat_service/: admin_presence.ex  application.ex  channels.ex  graceful_shutdown.ex  health_check.ex  messages.ex  telemetry.ex
chat_service/lib/chat_service/agents/: chat.ex  provider.ex  supervisor.ex  tool.ex
chat_service/lib/chat_service/circuit_breaker/: circuit_breaker.ex  supervisor.ex
chat_service/lib/chat_service/jobs/: message_job.ex  webhook_job.ex
chat_service/lib/chat_service/pipelines/: webhook_pipeline.ex
chat_service/lib/chat_service/schemas/: admin.ex  channel.ex  conversation.ex  dataset.ex  document.ex  message.ex  user.ex  webhook_log.ex
chat_service/lib/chat_service/vector_service/: client.ex
chat_service/lib/chat_service/workers/: message_buffer.ex
chat_service/lib/chat_service_web/: body_reader.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
chat_service/lib/chat_service_web/channels/: chat_channel.ex  metrics_channel.ex  traffic_channel.ex  user_socket.ex
chat_service/lib/chat_service_web/components/: core_components.ex
chat_service/lib/chat_service_web/controllers/: admin_controller.ex  agents_controller.ex  conversations_controller.ex  dashboard_controller.ex  datasets_controller.ex  error_html.ex  error_json.ex  health_controller.ex  line_oa_controller.ex  llm_controller.ex  metrics_controller.ex  page_controller.ex  webhook_controller.ex
chat_service/lib/chat_service_web/live/: agents_live.ex  channel_settings_live.ex  channels_live.ex  conversations_live.ex  dashboard_live.ex  dataset_detail_live.ex  datasets_live.ex  llm_live.ex  llm_test_live.ex  services_page.ex  settings_live.ex  traffic_live.ex
chat_service/lib/chat_service_web/plugs/: rate_limit.ex
chat_service/test/: chat_service_test.exs
chat_service/test/webhook/: handler_test.exs
vector_service/: CMakeLists.txt  Dockerfile  test_openai_embeddings.py
vector_service/include/: grpc_server.hpp  hnsw_index.hpp  http_router.hpp  http_server.hpp  simd_ops.hpp  usearch_index.hpp  vector_storage.hpp
vector_service/proto/: vector_service.proto
vector_service/src/: grpc_server.cpp  hnsw_index.cpp  http_router.cpp  http_server.cpp  main.cpp  simd_ops.cpp  vector_storage.cpp
vector_service/tests/: test_hnsw.cpp  test_simd.cpp
(+26 files in other folders)
